# POS

./: A_专利实现总纲.md  B_术语对照表.md  C_实现约束.md  PSSLE专利申请技术交底书v2.docx  main_avg_time_and_winning_rate.py  main_performance_curve.py  manual_check_stage2_compare_select.py  搭建KMS环境，准备接入POS项目.txt  未确认的约束.md  注意.txt  目录文件结构表.md  目录结构.md  连接openFHE环境.txt  逐步实现所有未实现过程.txt
native/kms_tfhe_eval.disabled/: Cargo.toml
native/kms_tfhe_eval.disabled/src/: main.rs
pos/: __init__.py  manual_check_stage10_a_metadata_free_decrypt.py  manual_check_stage10_b_patent_phase4_no_expected.py  manual_check_stage10_c_kms_ticket_builder.py  manual_check_stage10_c_ticket_chunks_euint8.py  manual_check_stage10_d4_phase3_kms_euint16.py  manual_check_stage10_d5a_phase3_dual_width.py  manual_check_stage10_d5c_kms_dual_width_primitives.py  manual_check_stage10_d5e_proof_gate_diagnostics.py  manual_check_stage10_d_run_phase4_strict_patent.py  manual_check_stage10_e_step20_ticket_recovery.py  manual_check_stage10_f_patent_proof_generator.py  manual_check_stage10_g_tfhe_trlwe_parameter_closure.py  manual_check_stage4_kms_bridge.py  manual_check_stage5_kms_backend.py  manual_check_stage6_fhe_entry_kms.py  manual_check_stage7_strict_backend_policy.py  manual_check_stage8_1_kms_cipher_decode.py  spec.py  (+15 more)
pos/crypto/thfhe_backend/: Cargo.toml  __init__.py  api.py  factory.py  kms_bridge.py  kms_eval_bridge.py  kms_fhe_backend.py  native_tfhe.py  openfhe_replacement.py
pos/crypto/thfhe_backend/src/: api.rs  compare.rs  context.rs  decrypt.rs  encrypt.rs  error.rs  handles.rs  keygen.rs  kms.rs  lib.rs
(+44 files in other folders)
