[package]
name = "kms_tfhe_eval"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
hex = "0.4"
kms-core-client = { path = "/mnt/d/biancheng/pycharm/scientific_project/kms/core-client", features = ["testing"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
