[package]
name = "thfhe_backend"
version = "0.2.0"
edition = "2021"

[lib]
name = "thfhe_backend"
crate-type = ["cdylib"]

[dependencies]
once_cell = "1.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
tfhe = { version = "0.11.3", features = ["integer", "shortint"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"